# SetIntersection_OpenMP

./: CMakeLists.txt  set_intersection.cpp  tests.cpp
